@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-07-31T12:50:04Z",
+  "timestamp" : "2025-08-01T12:50:25Z",
   "count_outdated" : 9292,
   "uniques_outdated" : 4480,
-  "count" : 9358,
-  "uniques" : 4535,
+  "count" : 9365,
+  "uniques" : 4541,
   "clones" : [
     {
       "timestamp": "2025-07-18T00:00:00Z",
-      "count": 12,
+      "count": 10,
       "count_minmax": [ 1, 12 ],
-      "count_decinc": [ 0, 12 ],
-      "uniques": 8,
+      "count_decinc": [ 2, 12 ],
+      "uniques": 6,
       "uniques_minmax": [ 1, 8 ],
-      "uniques_decinc": [ 0, 8 ]
+      "uniques_decinc": [ 2, 8 ]
     },
     {
       "timestamp": "2025-07-19T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 9,
       "uniques_minmax": [ 8, 9 ],
       "uniques_decinc": [ 0, 9 ]
+    },
+    {
+      "timestamp": "2025-08-01T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ],
+      "uniques_decinc": [ 0, 6 ]
     }
   ]
 }
